package com.freetimers.spartacus.game;

public enum IntrigueState {
    ACTIVE,
    SUCCESS,
    FAILURE
}
