package com.freetimers.spartacus.game;

public enum OfferState {
    ACTIVE,
    DECLINED
}
