package com.freetimers.spartacus.game;

public enum Phase {
    LOBBY,
    UPKEEP,
    INTRIGUE,
    MARKET,
    ARENA,
    AWARDS
}
